logs/bottle-auth.log
Listing '.'...
Listing './bin'...
Compiling './bin/bottle.py'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/Beaker-1.9.0.egg-info'...
Listing './lib/python3.5/site-packages/WebOb-1.7.4.dist-info'...
Listing './lib/python3.5/site-packages/beaker'...
Listing './lib/python3.5/site-packages/beaker/crypto'...
Listing './lib/python3.5/site-packages/beaker/ext'...
Listing './lib/python3.5/site-packages/bottle-0.12.13.egg-info'...
Listing './lib/python3.5/site-packages/bottle_auth'...
Listing './lib/python3.5/site-packages/bottle_auth/core'...
Compiling './lib/python3.5/site-packages/bottle_auth/core/escape.py'...
***   File "./lib/python3.5/site-packages/bottle_auth/core/escape.py", line 223
    _URL_RE = re.compile(ur"""\b((?:([\w-]+):(/{1,3})|www[.])(?:(?:(?:[^\s&()]|&amp;|&quot;)*(?:[^!"#$%&'()*+,.:;<=>?@\[\]^`{|}~\s]))|(?:\((?:[^\s&()]|&amp;|&quot;)*\)))+)""")
                                                                                                                                                                             ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/bottle_auth/core/httpclient.py'...
***   File "./lib/python3.5/site-packages/bottle_auth/core/httpclient.py", line 101
    except (httplib.error, socket.error, IOError), e:
                                                 ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/bottle_auth/social'...
Compiling './lib/python3.5/site-packages/bottle_auth/social/facebook.py'...
***   File "./lib/python3.5/site-packages/bottle_auth/social/facebook.py", line 34
    except HTTPRedirect, e:
                       ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/bottle_auth/social/google.py'...
***   File "./lib/python3.5/site-packages/bottle_auth/social/google.py", line 31
    except HTTPRedirect, e:
                       ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/bottle_auth/social/twitter.py'...
***   File "./lib/python3.5/site-packages/bottle_auth/social/twitter.py", line 29
    except HTTPRedirect, e:
                       ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/bottle_auth-0.3.3.egg-info'...
Listing './lib/python3.5/site-packages/bottle_beaker-0.1.3.egg-info'...
Listing './lib/python3.5/site-packages/bottle_mongo-0.3.0.egg-info'...
Listing './lib/python3.5/site-packages/bson'...
Listing './lib/python3.5/site-packages/gridfs'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/pymongo'...
Listing './lib/python3.5/site-packages/pymongo-3.6.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/webob'...
Listing './share'...
Listing './share/python-wheels'...
